fix: remove typo breaking polymer build

--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -86,7 +86,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div class="card">
 
       <h4>JavaScript Bundle Size</h4>
-      <paper-input "bs" value="{{bundleSize}}" label="Total JS bundle size (KB) - uncompressed"></paper-input> 
+      <paper-input value="{{bundleSize}}" label="Total JS bundle size (KB) - uncompressed"></paper-input> 
       <small>[[computeGZippedSize(bundleSize)]]KB gzipped (estimate)</small>
 
       <h4>Target Time To Interactive</h4>
