Add AppShell to fix Lighthouse score

--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,70 @@
     <meta name="theme-color" content="#3e9f8b">
   </head>
   <body>
-    <div id="app"></div>
+  <div id="app">
+    <!-- Inline static App Shell skeleton from App.vue -->
+    <div class="header-cont">
+        <div class="header">
+          <img id="logo" src="/static/logo.svg"/>
+          <span>A JavaScript cost visualization tool</span>
+        </div>
+    </div>    
+    <footer>Built with 💜 by <a href='https://twitter.com/addyosmani'>Addy Osmani</a></footer>
+    <!-- end App Shell -->
+  </div>
     <!-- built files will be auto injected -->
+    <style>
+    /* App Shell inline styles */
+      #app {
+        font-family: '.SFNSDisplay-Regular', 'Helvetica Neue', 'Lucida Grande', sans-serif;
+        font-size: 14px;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        text-align: center;
+        color: #2c3e50;
+        margin-top: 50px;
+      }
+      body {
+        margin: 0;
+      }
+      .header-cont {
+        width:100%;
+        position:fixed;
+        top:0px;
+        right: 0;
+        left: 0; 
+        z-index: 999;
+      }
+      .header {
+        background:#333333;
+        width:100%;
+        margin:0px auto;
+        color: white;
+      }
+      .header span {
+        display: block;
+        height: 23px;
+      }
+      #manager .dark {
+        margin-top: 10px;
+      }
+      #logo {
+        font-weight: bold;
+        font-size: 18px;
+        padding-top: 10px;
+        width: 90px;
+      }
+      footer {
+        padding: 50px;
+        font-size: 1.1em;
+      }
+
+      footer a {
+        text-decoration: none;
+        font-weight: 700;
+        color: #666;
+      }
+    </style>
     <script>
       if ('serviceWorker' in navigator) {
         // Delay registration until after the page has loaded, to ensure that our
